samples/_failures_safe/1761317252_497393_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c58a0879.c: In function ‘main’:
./samples/SAFE/__tmp_c58a0879.c:159:26: error: missing terminating ' character
  159 |         input[len - 1] = '\
      |                          ^~
./samples/SAFE/__tmp_c58a0879.c:159:9: error: expected expression at end of input
  159 |         input[len - 1] = '\
      |         ^~~~~
./samples/SAFE/__tmp_c58a0879.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c58a0879.c:159:9: error: expected declaration or statement at end of input
